@startuml

title __AUTOCARAVANA's Class Diagram__\n

  namespace org.core {
    class org.core.Autocaravana {
    }
  }
  

  namespace org.core {
    class org.core.AutocaravanaTest {
    }
  }
  

  namespace org.core {
    class org.core.Cliente {
    }
  }
  

  namespace org.core {
    class org.core.ClienteTest {
    }
  }
  

  namespace org.core {
    class org.core.Main {
    }
  }
  

  namespace org.core {
    interface org.core.ReglasAutocaravana {
    }
  }
  

  namespace org.core {
    interface org.core.ReglasCliente {
    }
  }
  

  namespace org.core {
    interface org.core.ReglasReserva {
    }
  }
  

  namespace org.core {
    interface org.core.RepositorioAutocaravana {
    }
  }
  

  namespace org.core {
    interface org.core.RepositorioCliente {
    }
  }
  

  namespace org.core {
    interface org.core.RepositorioReserva {
    }
  }
  

  namespace org.core {
    class org.core.Reserva {
    }
  }
  

  namespace org.core {
    class org.core.ReservaTest {
    }
  }
  

  namespace org.core {
    class org.core.ServicioAutocaravana {
    }
  }
  

  namespace org.core {
    class org.core.ServicioCliente {
    }
  }
  

  namespace org.core {
    class org.core.ServicioReserva {
    }
  }
  

  org.core.Reserva o-- org.core.Autocaravana : caravana
  org.core.Reserva o-- org.core.Cliente : cliente
  org.core.ServicioAutocaravana .up.|> org.core.ReglasAutocaravana
  org.core.ServicioAutocaravana .up.|> org.core.RepositorioAutocaravana
  org.core.ServicioCliente .up.|> org.core.ReglasCliente
  org.core.ServicioCliente .up.|> org.core.RepositorioCliente
  org.core.ServicioReserva .up.|> org.core.ReglasReserva
  org.core.ServicioReserva .up.|> org.core.RepositorioReserva


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
